adds functionality for Posts, adding friends, and being able to view different accounts and friends

--- a/src/main/resources/templates/myprofile.html
+++ b/src/main/resources/templates/myprofile.html
@@ -1,25 +1,50 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title th:if="${user != null}" th:text="'CodeFellowship | ' + ${user.username}">CodeFellowship | User-page</title>
-</head>
-<body>
-<h3 th:if="${user != null}" th:text="${'Current User: ' +user.username}"></h3>
-<form action="/myprofile" method="PUT">
-  <label for="firstName">First Name</label>
-  <input type="text" th:text="${user.firstName}" name="firstName">
-  <label for="lastName">Last Name</label>
-  <input type="text" th:value="${user.lastName}" name="lastName">
-  <label for="birthday">Birthday</label>
-  <input type="text" th:value="${user.birthday}" name="birthday">
-  <label for="bio">Bio</label>
-  <input type="text" th:text="${user.bio}" name="bio">
-  <input type="submit" value="Update Info!">
-</form>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title th:if="${user != null}" th:text="'CodeFellowship | ' + ${user.username}">CodeFellowship | User-page</title>
+    </head>
+    <body>
+        <h3 th:if="${user != null}" th:text="${'Current User: ' +user.username}"></h3>
+        <form action="/myprofile" th:method="PUT">
+            <label for="firstName">First Name</label>
+            <input type="text" th:value="${user.firstName}" name="firstName">
+            <label for="lastName">Last Name</label>
+            <input type="text" th:value="${user.lastName}" name="lastName">
+            <label for="birthday">Birthday</label>
+            <input type="text" th:value="${user.birthday}" name="birthday">
+            <label for="bio">Bio</label>
+            <input type="text" th:value="${user.bio}" name="bio">
+            <input type="submit" value="Update Info!">
+        </form>
+        <br><br>
+            <h3 for="body">Write a Post!</h3>
+        <form action="/add-post" method="POST">
+            <textarea name="body" rows="5" cols="100"></textarea>
+            <input type="hidden" th:value="${user.username}" name="username">
+            <input type="submit" value="Add Post!">
+        </form>
 
-</body>
+
+
+        <h3>Friends</h3>
+        <ul th:each="friend : ${friends}">
+            <li th:text="${friend.firstName}"></li>
+        </ul>
+        <br>
+
+        <h3>Posts</h3>
+        <ul th:each="post : ${posts}">
+            <li th:text="${post.body}"></li>
+        </ul>
+        <br>
+
+        <h3>Posts by Friends</h3>
+        <ul th:each="post : ${friendsPosts}">
+            <li th:text="${post.myUser.firstName} + ': ' +${post.body}"></li>
+        </ul>
+    </body>
 </html>
